Fixed meta tegs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+     <!-- Open Graph для Telegram, WhatsApp, соцсетей -->
+  <meta property="og:title" content="Настя & Илья | 4 июля 2026" />
+  <meta property="og:description" content="💍 Дорогие друзья! Приглашаем вас на нашу свадьбу. Ждём вас разделить с нами этот счастливый день!" />
+  <meta property="og:image" content="https://VERITASICH.github.io/wedding-website/images/og-image.jpg" />
+  <meta property="og:url" content="https://VERITASICH.github.io/wedding-website/" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Для Telegram (как карточка) -->
+  <meta name="twitter:card" content="summary_large_image" />
     <title>Настя & Илья | Наша свадьба</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
